--- a/2_data_science_basics.ipynb
+++ b/2_data_science_basics.ipynb
@@ -113,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.4.4'"
+       "'2.1.4'"
       ]
      },
      "execution_count": 2,
@@ -183,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.5.2'"
+       "'3.8.2'"
       ]
      },
      "execution_count": 4,
@@ -1617,9 +1617,9 @@
    "name": "dviz"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('py-3.8')",
+   "display_name": "dviz",
    "language": "python",
-   "name": "python3"
+   "name": "dviz"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1631,7 +1631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "nteract": {
    "version": "0.28.0"
